# rbpodo_ros2_ws

./: .gitignore  README.md  frames_2025-02-11_16.44.52.gv  frames_2025-02-11_16.51.45.gv  test_movement.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/rb3_730es_u_moveit_config/share/rb3_730es_u_moveit_config/: local_setup.sh  package.sh
install/rbpodo_bringup/share/rbpodo_bringup/: package.sh
install/rbpodo_controller/lib/rbpodo_controller/: rbpodo_controller
install/rbpodo_controller/share/rbpodo_controller/: package.dsv  package.ps1  package.sh
install/rbpodo_description/share/rbpodo_description/: package.sh
install/rbpodo_hardware/share/rbpodo_hardware/: package.sh
install/rbpodo_kinematics/share/rbpodo_kinematics/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/rbpodo_kinematics/share/rbpodo_kinematics/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  rbpodo_kinematicsConfig.cmake
install/rbpodo_kinematics/share/rbpodo_kinematics/config/: target_poses.txt
install/rbpodo_kinematics/share/rbpodo_kinematics/launch/: motion_planner.launch.py
install/rbpodo_msgs/share/rbpodo_msgs/: package.sh
install/rbpodo_msgs/share/rbpodo_msgs/cmake/: export_rbpodo_msgs__rosidl_generator_cppExport.cmake  export_rbpodo_msgs__rosidl_typesupport_fastrtps_cExport-release.cmake  (+5 more)
log/: latest_build
src/rbpodo_controller/: CMakeLists.txt  package.xml
src/rbpodo_controller/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/rbpodo_controller/launch/: rbpodo_controller.launch.py
src/rbpodo_controller/log/: latest_build
src/rbpodo_controller/src/: robot_arm_controller.cpp
src/rbpodo_kinematics/: CMakeLists.txt
src/rbpodo_kinematics/config/: dh_parameters.yaml
src/rbpodo_kinematics/include/rbpodo_kinematics/: robot_kinematics.hpp
src/rbpodo_kinematics/launch/: kinematics.launch.py
src/rbpodo_kinematics/src/: forward_kinematics.cpp  inverse_kinematics.cpp  motion_planner.cpp  robot_kinematics.cpp
(+58 files in other folders)
